--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </a>
         </div>
         <ul>
-            <li><a href="https://www.ubisoft.com/en-us/games">MORE GAMES</a></li>
-            <li><a href="https://store.ubi.com/us">STORE</a></li>
-            <li><a href="https://news.ubisoft.com/">NEWS</a></li>
-            <li><a href="https://forums.ubi.com/">FORUMS</a></li>
-            <li><a href="https://support.ubi.com/">SUPPORT</a></li>
+            <li><a href="https://www.ubisoft.com/en-us/games" target="_blank">MORE GAMES</a></li>
+            <li><a href="https://store.ubi.com/us" target="_blank">STORE</a></li>
+            <li><a href="https://news.ubisoft.com/" target="_blank">NEWS</a></li>
+            <li><a href="https://forums.ubi.com/" target="_blank">FORUMS</a></li>
+            <li><a href="https://support.ubi.com/" target="_blank">SUPPORT</a></li>
         </ul>
         <div class="pc_nav_search">
         <a class="SearchButton"><img class="search_icon" alt="search" src="img/search.png"></a>
@@ -33,6 +33,20 @@
     <div class="join_us">
         <h2 class="join_title">JOIN UBISOFT CLUB</h2>
         <h4 class="join_sub">Get more from your games</h4>
+        <div class="join_card_wrapper">
+            <div class="join_card_container">
+                <div class="join_card">
+                    <div class="join_card_img_container">
+                        <img class="join_card_img" src="img/join_challenge.png"/>
+                    </div>
+                    <div class="join_introduction">
+                    <h4>Take on More Challenges, Access More Rewards, Enjoy More Benefits</h4>
+                    <h5>You just need your Ubisoft account!</h5>
+                    </div>
+                </div>
+                <img src="img/shadow.png"/>
+            </div>
+        </div>
     </div>
 </div>
 </body>
