--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <a class="SearchButton"><img class="search_icon" alt="search" src="img/search.png"></a>
         </div>
     </div>
+
+
     <div class="join_us">
         <h2 class="join_title">JOIN UBISOFT CLUB</h2>
         <h4 class="join_sub">Get more from your games</h4>
@@ -40,14 +42,51 @@
                         <img class="join_card_img" src="img/join_challenge.png"/>
                     </div>
                     <div class="join_introduction">
-                    <h4>Take on More Challenges, Access More Rewards, Enjoy More Benefits</h4>
-                    <h5>You just need your Ubisoft account!</h5>
+                        <h4>Take on More Challenges, Access More Rewards, Enjoy More Benefits</h4>
+                        <h5>You just need your Ubisoft account!</h5>
+                        <div class="join_btn_container"><a href="https://club.ubisoft.com/" target="_blank"><button class="join_btn">SIGN ME UP!</button></a></div>
                     </div>
                 </div>
-                <img src="img/shadow.png"/>
+                <div class="join_card_shadow">
+                    <img src="img/shadow.png"/>
+                </div>
+            </div>
+            <div class="join_card_container" style="height:auto;max-width:185px;max-height:275px;">
+                <div class="join_card join_us_card_container">
+                    <div class="join_us_card_img_container">
+                        <img class="join_us_card_img" src="img/join_join.png"/>
+                    </div>
+                    <a href="https://club.ubisoft.com/" target="_blank"><div class="join_us">
+                        JOIN US
+                    </div></a>
+                </div>
+                <div class="join_card_shadow">
+                    <img src="img/shadow.png" style="margin-top:-9px;"/>
+                </div>
+            </div>
+
+            <div class="join_card_container">
+                <div class="join_card">
+                    <div class="join_card_img_container">
+                        <img class="join_card_img" src="img/join_club.png"/>
+                    </div>
+                    <div class="join_introduction">
+                        <h4>Get the most of your Ubisoft experience, all available in one place!</h4>
+                        <h5>Get Club on all your devices</h5>
+                        <div class="join_btn_container"><a href="https://play.google.com/store/apps/details?id=com.ubisoft.uplay" target="_blank"><img src="img/google_play.png"/></a><a href="https://itunes.apple.com/us/app/ubisoft-club/id405228226?mt=8" target="_blank"><img src="img/app_store.png"/></a></div>
+                    </div>
+                </div>
+                <div class="join_card_shadow">
+                    <img src="img/shadow.png"/>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="footer">
+111
+    </div>
+
 </div>
 </body>
 </html>
