--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
                     <img src="img/shadow.png"/>
                 </div>
             </div>
-            <div class="join_card_container" style="height:auto;max-width:185px;max-height:275px;">
-                <div class="join_card join_us_card_container">
+
+            <div class="join_card_container join_us_card_container">
+                <div class="join_card join_us_card">
                     <div class="join_us_card_img_container">
                         <img class="join_us_card_img" src="img/join_join.png"/>
                     </div>
-                    <a href="https://club.ubisoft.com/" target="_blank"><div class="join_us">
+                    <a href="https://club.ubisoft.com/" target="_blank"><div class="join_us_join_us">
                         JOIN US
                     </div></a>
                 </div>
@@ -84,9 +85,27 @@
     </div>
 
     <div class="footer">
-111
-    </div>
+        <div class="channels">
+            <p class="channels_text">
+                Visit Other Ubisoft channels
+            </p>
+            <div class="channels_list">
+                <a href="https://twitter.com/Ubisoft" target="_blank"><img class="channels_btn" src="img/twitter.png"/></a>
+                <a href="https://www.facebook.com/ubisoft/" target="_blank"><img class="channels_btn" src="img/facebook.png"/></a>
+                <a href="https://www.twitch.tv/ubisoft" target="_blank"><img class="channels_btn" src="img/twitch.png"/></a>
+                <a href="https://www.youtube.com/user/ubisoft" target="_blank"><img class="channels_btn" src="img/youtube.png"/></a>
+                <a href="https://instagram.com/ubisoft" target="_blank"><img class="channels_btn" src="img/instagram.png"/></a>
+            </div>
+        </div>
+        <div class="download">
+            <a href="https://ubistatic3-a.akamaihd.net/orbit/launcher_installer/UplayInstaller.exe" target="_blank">- Download The Uplay Launcher -</a>
+        </div>
 
+
+        <p class="copyright">
+            © 2018 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the Ubisoft logo are<br>trademarks of Ubisoft Entertainment in the U.S. and/or other countries.
+        </p>
+    </div>
 </div>
 </body>
 </html>
