--- a/index.html
+++ b/index.html
@@ -100,7 +100,39 @@
         <div class="download">
             <a href="https://ubistatic3-a.akamaihd.net/orbit/launcher_installer/UplayInstaller.exe" target="_blank">- Download The Uplay Launcher -</a>
         </div>
+        <div class="links">
+            <div class="links_left">
+                <img class="links_logo" src="img/ubi_logo.png"/>
+                <br>
+                <a href="https://www.ubisoft.com/en-us/privacy-policy.html" target="_blank">PRIVACY</a> · <a href="https://www.ubisoft.com/en-us/terms-of-service.html" target="_blank">TERMS</a><br>
+                <a href="https://legal.ubi.com/InterestBasedAdvertising/en-US">INTEREST-BASED ADS</a><br><br>
+                <a href="https://www.ubisoft.com/en-us/contact-us.html" target="_blank">CONTACTS</a>
+            </div>
+            <div class="links_middle">
+                <div class="links_links_left">
+                    <a href="https://club.ubisoft.com/" target="_blank">CLUB</a>
+                    <a href="https://playtest-secure.ubi.com/" target="_blank">PLAYTEST</a>
+                </div>
+                <div class="links_links_middle">
+                    <a href="https://club.ubisoft.com/" target="_blank">COMPANY</a>
+                    <a href="https://www.ubisoft.com/en-us/company/press/index.aspx" target="_blank">PRESS</a>
+                    <a href="https://www.ubisoft.com/en-us/company/investor_center/index.aspx" target="_blank">INVESTORS</a>
+                    <a href="https://www.ubisoft.com/en-us/company/start-ups/index.aspx" target="_blank">START-UPS</a>
+                </div>
+                <div class="links_links_right">
+                    <a href="https://www.ubisoft.com/en-us/careers/experience.aspx" target="_blank">CAREERS</a>
+                    <a href="https://www.ubisoft.com/en-us/careers/experience.aspx#world-map" target="_blank">LOCATIONS</a>
+                </div>
 
+
+            </div>
+            <div class="links_right">
+                <div class="language">UBISOFT IN:<br>
+                    <img src="img/global.png"/> ENGLISH
+                </div><br>
+                <a href="http://www.esrb.org/confirm/ubisoft-confirmation.jsp"><img src="img/ESRB.jpg"/></a>
+            </div>
+        </div>
 
         <p class="copyright">
             © 2018 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the Ubisoft logo are<br>trademarks of Ubisoft Entertainment in the U.S. and/or other countries.
