adjust menu structure

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         </div>
     </div>
 
+    <div class="inside">
+        <div class="inside_before">
+            <p>INSIDE UBISOFT</p>
+        </div>
+        <div class="inside_after">
+
+        </div>
+    </div>
 
     <div class="join_us">
         <h2 class="join_title">JOIN UBISOFT CLUB</h2>
