--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
         <div class="inside_before">
             <p>INSIDE UBISOFT</p>
         </div>
+        <div class="inside_container" style="height:500px;">
+            <div class="inside_item inside_item_active" style="height:500px;">
+                <img class="inside_item_img" src="img/inside/inside1_p.jpg"/>
+            </div>
+        </div>
         <div class="inside_after">
-
         </div>
     </div>
 
