--- a/index.html
+++ b/index.html
@@ -31,14 +31,86 @@
         </div>
     </div>
 
+    <div class="trending">
+        <div class="trending_before">
+            <p>TRENDING TRAILERS</p>
+        </div>
+        <div class="inside_container">
+            <div class="inside_item inside_item_active">
+                <div class="inside_img_container">
+                    <img class="inside_item_img" src="img/inside/inside1_p.jpg"/>
+                </div>
+            </div>
+        </div>
+        <div class="trending_after">
+        </div>
+    </div>
+
+    <div class="news">
+        <h4>LATEST NEWS</h4>
+    </div>
+
     <div class="inside">
         <div class="inside_before">
             <p>INSIDE UBISOFT</p>
         </div>
-        <div class="inside_container" style="height:500px;">
-            <div class="inside_item inside_item_active" style="height:500px;">
-                <img class="inside_item_img" src="img/inside/inside1_p.jpg"/>
+        <div class="inside_container">
+            <div class="inside_item inside_item_active">
+                <div class="inside_item_description">
+                    <h4>INTRODUCING UBISOFT WINNIPEG</h4>
+                    <div class="inside_item_description_text">The newest addition to the Ubisoft Canadian studios family is taking inclusion to the next level.
+                    <div class="inside_item_button_container">
+                        <div class="inside_item_button">WATCH NOW</div>
+                    </div>
+                    </div>
+                </div>
+                <div class="inside_img_container">
+                    <img class="inside_item_img" src="img/inside/inside1_p.jpg"/>
+                </div>
             </div>
+            <div class="inside_item inside_item_active">
+                <div class="inside_item_description">
+                    <h4>Say hello to SAM</h4>
+                    <div class="inside_item_description_text">Need to master a zone, discover the latest version, or get answers on anything Ubisoft? Need to master a zone, discover the latest version, or get answers on anything Ubisoft? Type or speak a question for Sam and find what you need in seconds.
+                        <div class="inside_item_button_container">
+                            <div class="inside_item_button">MEET SAM</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="inside_img_container">
+                    <img class="inside_item_img" src="img/inside/inside2_p.jpg"/>
+                </div>
+            </div>
+
+            <div class="inside_item inside_item_active">
+                <div class="inside_item_description">
+                    <h4>LIFE AT UBISOFT</h4>
+                    <div class="inside_item_description_text">Wonder what it's like to work at Ubisoft? Get the inside scoop!
+                        <div class="inside_item_button_container">
+                            <div class="inside_item_button">WATCH NOW</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="inside_img_container">
+                    <img class="inside_item_img" src="img/inside/inside3_p.jpg"/>
+                </div>
+            </div>
+
+            <div class="inside_item inside_item_active">
+                <div class="inside_item_description">
+                    <h4>REINVENTING THE GAME</h4>
+                    <div class="inside_item_description_text">AI is revolutionizing the way Ubisoft developers make better, more realistic games.
+                        <div class="inside_item_button_container">
+                            <div class="inside_item_button">LEARN MORE</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="inside_img_container">
+                    <img class="inside_item_img" src="img/inside/inside4_p.jpg"/>
+                </div>
+            </div>
+
+
         </div>
         <div class="inside_after">
         </div>
