--- a/index.html
+++ b/index.html
@@ -31,6 +31,43 @@
         </div>
     </div>
     <div class="roll_container">
+        <div id="roll_controls" class="roll_controls">
+            <div id="roll_left" class="roll_left" data-opt="left">
+                <img src="img/back.png" data-opt="left"/>
+            </div>
+            <div id="roll_go" class="roll_right" data-opt="right">
+                <img src="img/go.png" data-opt="right"/>
+            </div>
+            <ul class="roll_nav" id="roll_nav">
+                <li class="roll_nav_items roll_nav_items_active" data-id="0">
+                    <img src="img/first/assassins.png"/>
+                    <div class="roll_nav_strip" style="background:rgb(150, 15, 15);"></div>
+                </li>
+                <li class="roll_nav_items" data-id="1">
+                    <img src="img/first/crew.png"/>
+                    <div class="roll_nav_strip" style="background:rgb(142, 229, 63);"></div>
+                </li>
+                <li class="roll_nav_items" data-id="2">
+                    <img src="img/first/division.png"/>
+                    <div class="roll_nav_strip" style="background:rgb(150, 15, 15);"></div>
+                </li>
+                <li class="roll_nav_items" data-id="3">
+                    <img src="img/first/farcry.png"/>
+                    <div class="roll_nav_strip" style="background:rgb(237, 181, 58);"></div>
+                </li>
+                <li class="roll_nav_items" data-id="4">
+                    <img src="img/first/ghost.png"/>
+                    <div class="roll_nav_strip" style="background:rgb(224, 151, 18);"></div>
+                </li>
+                <li class="roll_nav_items" data-id="5">
+                    <img src="img/first/honor.png"/>
+                    <div class="roll_nav_strip" style="background:rgb(248, 79, 32);"></div>
+                </li>
+            </ul>
+        </div>
+
+
+
         <ul id="roll_container_list" class="roll_container_list">
             <li class="roll">
                 <img src="img/first/assassins_p.jpg"/>
@@ -53,16 +90,26 @@
                     <h4 style="font-size:5.6vw;color:white;">HISTORY WILL REMEMBER</h4>
                 </div>
             </li>
-        </ul>
-        <ul class="roll_nav">
-            <li class="roll_nav_items">
-                <img src="img/first/assassins.png"/>
+            <li class="roll">
+                <img src="img/first/farcry_p.jpg"/>
+                <div class="roll_content">
+                    <h4 style="font-size:2.6vw;color:rgb(237, 181, 58);">FAR CRY 5</h4>
+                    <h4 style="font-size:5.6vw;color:white;">DEAD LIVING ZOMBIES DLC AVAILABLE NOW</h4>
+                </div>
             </li>
-            <li class="roll_nav_items">
-                <img src="img/first/crew.png"/>
+            <li class="roll">
+                <img src="img/first/ghost_p.jpg"/>
+                <div class="roll_content">
+                    <h4 style="font-size:2.6vw;color:rgb(224, 151, 18);">GHOST RECON WILDLANDS</h4>
+                    <h4 style="font-size:5.6vw;color:white;">EXPLORE THE MASSIVE OPEN WORLD OF BOLIVIA</h4>
+                </div>
             </li>
-            <li class="roll_nav_items">
-                <img src="img/first/division.png"/>
+            <li class="roll">
+                <img src="img/first/honor_p.jpg"/>
+                <div class="roll_content">
+                    <h4 style="font-size:2.6vw;color:rgb(248, 79, 32);">FOR HONOR: MARCHING FIRE</h4>
+                    <h4 style="font-size:5.6vw;color:white;">AVAILABLE NOW</h4>
+                </div>
             </li>
         </ul>
     </div>
