--- a/index.html
+++ b/index.html
@@ -38,36 +38,39 @@
             <div id="roll_go" class="roll_right" data-opt="right">
                 <img src="img/go.png" data-opt="right"/>
             </div>
-            <ul class="roll_nav" id="roll_nav">
-                <li class="roll_nav_items roll_nav_items_active" data-id="0">
-                    <img src="img/first/assassins.png"/>
-                    <div class="roll_nav_strip" style="background:rgb(150, 15, 15);"></div>
-                </li>
-                <li class="roll_nav_items" data-id="1">
-                    <img src="img/first/crew.png"/>
-                    <div class="roll_nav_strip" style="background:rgb(142, 229, 63);"></div>
-                </li>
-                <li class="roll_nav_items" data-id="2">
-                    <img src="img/first/division.png"/>
-                    <div class="roll_nav_strip" style="background:rgb(150, 15, 15);"></div>
-                </li>
-                <li class="roll_nav_items" data-id="3">
-                    <img src="img/first/farcry.png"/>
-                    <div class="roll_nav_strip" style="background:rgb(237, 181, 58);"></div>
-                </li>
-                <li class="roll_nav_items" data-id="4">
-                    <img src="img/first/ghost.png"/>
-                    <div class="roll_nav_strip" style="background:rgb(224, 151, 18);"></div>
-                </li>
-                <li class="roll_nav_items" data-id="5">
-                    <img src="img/first/honor.png"/>
-                    <div class="roll_nav_strip" style="background:rgb(248, 79, 32);"></div>
-                </li>
-            </ul>
+            <div class="roll_nav_container">
+                <ul class="roll_nav" id="roll_nav">
+                    <li class="roll_nav_items hidden" data-id="7">
+                        <img src="img/first/rainbow.png"/>
+                    </li>
+                    <li class="roll_nav_items hidden" data-id="8">
+                        <img src="img/first/starlink.png"/>
+                    </li>
+                    <li class="roll_nav_items" data-id="0">
+                        <img src="img/first/assassins.png"/>
+                    </li>
+                    <li class="roll_nav_items" data-id="1">
+                        <img src="img/first/crew.png"/>
+                    </li>
+                    <li class="roll_nav_items roll_nav_items_active" data-id="2">
+                        <img src="img/first/division.png"/>
+                        <div class="roll_nav_strip roll_nav_strip_active" style="background:rgb(150, 15, 15);"></div>
+                    </li>
+                    <li class="roll_nav_items" data-id="3">
+                        <img src="img/first/farcry.png"/>
+                    </li>
+                    <li class="roll_nav_items" data-id="4">
+                        <img src="img/first/ghost.png"/>
+                    </li>
+                    <li class="roll_nav_items hidden" data-id="5">
+                        <img src="img/first/honor.png"/>
+                    </li>
+                    <li class="roll_nav_items hidden" data-id="6">
+                        <img src="img/first/justdance.png"/>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-
-
         <ul id="roll_container_list" class="roll_container_list">
             <li class="roll">
                 <img src="img/first/assassins_p.jpg"/>
@@ -111,6 +114,30 @@
                     <h4 style="font-size:5.6vw;color:white;">AVAILABLE NOW</h4>
                 </div>
             </li>
+
+            <li class="roll">
+                <img src="img/first/justdance_p.jpg"/>
+                <div class="roll_content">
+                    <h4 style="font-size:2.6vw;color:rgb(209, 86, 229);">JUST DANCE 2019</h4>
+                    <h4 style="font-size:5.6vw;color:white;">DANCE TO YOUR OWN BEAT</h4>
+                </div>
+            </li>
+            <li class="roll">
+                <img src="img/first/rainbow_p.jpg"/>
+                <div class="roll_content">
+                    <h4 style="font-size:2.6vw;color:rgb(177, 81, 43);">RAINBOW SIX SIEGE</h4>
+                    <h4 style="font-size:5.6vw;color:white;">OPERATION GRIM SKY</h4>
+                </div>
+            </li>
+            <li class="roll">
+                <img src="img/first/starlink_p.jpg"/>
+                <div class="roll_content">
+                    <h4 style="font-size:2.6vw;color:rgb(243, 157, 38);">STARLINK: BATTLE FOR ATLAS</h4>
+                    <h4 style="font-size:5.6vw;color:white;">STAR FOX JOINS STARLINK</h4>
+                </div>
+            </li>
+
+
         </ul>
     </div>
 
