--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="img/go.png" data-opt="right"/>
             </div>
             <div class="roll_nav_container">
-                <ul class="roll_nav" id="roll_nav">
+                <ul class="roll_nav roll_nav_active" id="roll_nav">
                     <li class="roll_nav_items hidden" data-id="7">
                         <img src="img/first/rainbow.png"/>
                     </li>
