--- a/index.html
+++ b/index.html
@@ -158,6 +158,21 @@
 
     <div class="news">
         <h4>LATEST NEWS</h4>
+        <div class="news_nav_container" id="news_nav_container">
+            <ul id="news_nav_ul">
+                <li class="news_nav_container_li news_nav_container_li_active" data-active="all" data-id="0">ALL NEWS</li>
+                <li class="news_nav_container_li" data-active="assassins-creed-odyssey" data-id="1">ASSASSIN'S CREED</li>
+                <li class="news_nav_container_li" data-active="for-honor" data-id="2">FOR HONOR</li>
+                <li class="news_nav_container_li" data-active="the-division-2" data-id="3">THE DIVISION</li>
+                <li class="news_nav_container_li" data-active="rainbow-six-siege" data-id="4">RAINBOW SIX</li>
+            </ul>
+        </div>
+        <div class="news_container" id="news_container">
+            
+        </div>
+        <div class="news_btn_container">
+            <a href="https://news.ubisoft.com/" target="_blank"><button class="function_btn">ALL NEWS</button></a>
+        </div>
     </div>
 
     <div class="inside">
@@ -335,4 +350,5 @@
 </div>
 </body>
 <script src="js/scroll.js"></script>
+<script src="js/ajax.js"></script>
 </html>
