--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         </ul>
         <div class="pc_nav_search">
         <a class="SearchButton"><img class="search_icon" alt="search" src="img/search.png"></a>
+            <div class="pc_nav_search_box">
+                <input class="pc_nav_search_input" placeholder="Search all Ubisoft Games and News"/>
+            </div>
         </div>
     </div>
     <div class="roll_container">
@@ -274,13 +277,30 @@
                     <img src="img/shadow.png" style="margin-top:-9px;"/>
                 </div>
             </div>
-
             <div class="join_card_container">
                 <div class="join_card">
                     <div class="join_card_img_container">
                         <img class="join_card_img" src="img/join_club.png"/>
                     </div>
                     <div class="join_introduction">
+                        <h4>Get the most of your Ubisoft experience, all available in one place!</h4>
+                        <h5>Get Club on all your devices</h5>
+                        <div class="join_btn_container"><a href="https://play.google.com/store/apps/details?id=com.ubisoft.uplay" target="_blank"><img src="img/google_play.png"/></a><a href="https://itunes.apple.com/us/app/ubisoft-club/id405228226?mt=8" target="_blank"><img src="img/app_store.png"/></a></div>
+                    </div>
+                </div>
+                <div class="join_card_shadow">
+                    <img src="img/shadow.png"/>
+                </div>
+            </div>
+            <div class="join_card_container_mobile">
+                <div class="join_card">
+                    <div class="join_card_img_container">
+                        <img class="join_card_img" src="img/rabbit.png"/>
+                    </div>
+                    <div class="join_introduction">
+                        <h4>Take on More Challenges, Access More Rewards, Enjoy More Benefits</h4>
+                        <h5>You just need your Ubisoft account!</h5>
+                        <div class="join_btn_container"><a href="https://club.ubisoft.com/" target="_blank"><button class="join_btn">JOIN US</button></a></div>
                         <h4>Get the most of your Ubisoft experience, all available in one place!</h4>
                         <h5>Get Club on all your devices</h5>
                         <div class="join_btn_container"><a href="https://play.google.com/store/apps/details?id=com.ubisoft.uplay" target="_blank"><img src="img/google_play.png"/></a><a href="https://itunes.apple.com/us/app/ubisoft-club/id405228226?mt=8" target="_blank"><img src="img/app_store.png"/></a></div>
@@ -332,8 +352,6 @@
                     <a href="https://www.ubisoft.com/en-us/careers/experience.aspx" target="_blank">CAREERS</a>
                     <a href="https://www.ubisoft.com/en-us/careers/experience.aspx#world-map" target="_blank">LOCATIONS</a>
                 </div>
-
-
             </div>
             <div class="links_right">
                 <div class="language">UBISOFT IN:<br>
@@ -342,9 +360,8 @@
                 <a href="http://www.esrb.org/confirm/ubisoft-confirmation.jsp"><img src="img/ESRB.jpg"/></a>
             </div>
         </div>
-
         <p class="copyright">
-            © 2018 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the Ubisoft logo are<br>trademarks of Ubisoft Entertainment in the U.S. and/or other countries.
+            © 2018 Ubisoft Entertainment. All Rights Reserved. Ubisoft, Ubi.com and the Ubisoft logo are<span id="copyright_br"></span>trademarks of Ubisoft Entertainment in the U.S. and/or other countries.
         </p>
     </div>
 </div>
