--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <li><a href="https://forums.ubi.com/" target="_blank">FORUMS</a></li>
             <li><a href="https://support.ubi.com/" target="_blank">SUPPORT</a></li>
         </ul>
-        <div class="pc_nav_search">
-        <a class="SearchButton"><img class="search_icon" alt="search" src="img/search.png"></a>
-            <div class="pc_nav_search_box">
-                <input class="pc_nav_search_input" placeholder="Search all Ubisoft Games and News"/>
+        <div class="pc_nav_search" id="pc_nav_search">
+        <a class="search_button" id="search_btn"><img id="search_icon" class="search_icon" alt="search" src="img/search.png"></a>
+            <div class="pc_nav_search_box" id="pc_nav_search_box">
+                <input id="pc_nav_search_input" class="pc_nav_search_input" placeholder="Search all Ubisoft Games and News"/>
             </div>
         </div>
     </div>
@@ -368,4 +368,5 @@
 </body>
 <script src="js/scroll.js"></script>
 <script src="js/ajax.js"></script>
+<script src="js/search.js"></script>
 </html>
