--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <li><a href="https://support.ubi.com/" target="_blank">SUPPORT</a></li>
         </ul>
         <div class="pc_nav_search" id="pc_nav_search">
-        <a class="search_button" id="search_btn"><img id="search_icon" class="search_icon" alt="search" src="img/search.png"></a>
+            <div class="pc_nav_search_btn_container" id="pc_nav_search_btn_container">
+                <a class="search_button" id="search_btn"><img id="search_icon" class="search_icon" alt="search" src="img/search.png"></a>
+            </div>
             <div class="pc_nav_search_box" id="pc_nav_search_box">
                 <input id="pc_nav_search_input" class="pc_nav_search_input" placeholder="Search all Ubisoft Games and News"/>
             </div>
@@ -35,49 +37,49 @@
     </div>
     <div class="roll_container">
         <div id="roll_controls" class="roll_controls">
-            <div id="roll_left" class="roll_left" data-opt="left">
+            <div id="roll_left" class="roll_left" data-dir="r" data-move="1">
                 <img src="img/back.png" data-opt="left"/>
             </div>
-            <div id="roll_go" class="roll_right" data-opt="right">
+            <div id="roll_go" class="roll_right" data-dir="l" data-move="1">
                 <img src="img/go.png" data-opt="right"/>
             </div>
             <div class="roll_nav_container">
                 <ul class="roll_nav roll_nav_active" id="roll_nav">
-                    <li class="roll_nav_items hidden" data-id="7">
+                    <li class="roll_nav_items hidden" data-id="7" data-rank="0" data-dir="l" data-move="4">
                         <img src="img/first/rainbow.png"/>
                     </li>
-                    <li class="roll_nav_items hidden" data-id="8">
+                    <li class="roll_nav_items hidden" data-id="8" data-rank="1" data-dir="l" data-move="3">
                         <img src="img/first/starlink.png"/>
                     </li>
-                    <li class="roll_nav_items" data-id="0">
+                    <li class="roll_nav_items" data-id="0" data-rank="2" data-dir="l" data-move="2">
                         <img src="img/first/assassins.png"/>
                     </li>
-                    <li class="roll_nav_items" data-id="1">
+                    <li class="roll_nav_items" data-id="1" data-rank="3" data-dir="l" data-move="1">
                         <img src="img/first/crew.png"/>
                     </li>
-                    <li class="roll_nav_items roll_nav_items_active" data-id="2">
+                    <li class="roll_nav_items roll_nav_items_active" data-id="2" data-rank="4">
                         <img src="img/first/division.png"/>
                         <div class="roll_nav_strip roll_nav_strip_active" style="background:rgb(150, 15, 15);"></div>
                     </li>
-                    <li class="roll_nav_items" data-id="3">
+                    <li class="roll_nav_items" data-id="3" data-rank="5" data-dir="r" data-move="1">
                         <img src="img/first/farcry.png"/>
                     </li>
-                    <li class="roll_nav_items" data-id="4">
+                    <li class="roll_nav_items" data-id="4" data-rank="6" data-dir="r" data-move="2">
                         <img src="img/first/ghost.png"/>
                     </li>
-                    <li class="roll_nav_items hidden" data-id="5">
+                    <li class="roll_nav_items hidden" data-id="5" data-rank="7" data-dir="r" data-move="3">
                         <img src="img/first/honor.png"/>
                     </li>
-                    <li class="roll_nav_items hidden" data-id="6">
+                    <li class="roll_nav_items hidden" data-id="6" data-rank="8" data-dir="r" data-move="4">
                         <img src="img/first/justdance.png"/>
                     </li>
                 </ul>
             </div>
         </div>
-        <ul id="roll_container_list" class="roll_container_list">
+        <ul id="roll_container_list" class="roll_container_list" style="transform:translate(-200vw);">
             <li class="roll">
                 <img src="img/first/assassins_p.jpg"/>
-                <div class="roll_content roll_content_active">
+                <div class="roll_content">
                     <h4 style="font-size:2.6vw;color:rgb(150, 15, 15);">"THE BEST THE SERIES HAS EVER BEEN" -IGN</h4>
                     <h4 style="font-size:5.6vw;color:white;">AVAILABLE NOW</h4>
                 </div>
@@ -91,7 +93,7 @@
             </li>
             <li class="roll">
                 <img src="img/first/division_p.jpg"/>
-                <div class="roll_content">
+                <div class="roll_content roll_content_active">
                     <h4 style="font-size:2.6vw;color:rgb(150, 15, 15);">TOM CLANCY'S THE DIVISION 2</h4>
                     <h4 style="font-size:5.6vw;color:white;">HISTORY WILL REMEMBER</h4>
                 </div>
@@ -139,8 +141,6 @@
                     <h4 style="font-size:5.6vw;color:white;">STAR FOX JOINS STARLINK</h4>
                 </div>
             </li>
-
-
         </ul>
     </div>
 
