--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </li>
                     <li class="roll_nav_items roll_nav_items_active" data-id="2" data-rank="4">
                         <img src="img/first/division.png"/>
-                        <div class="roll_nav_strip roll_nav_strip_active" style="background:rgb(150, 15, 15);"></div>
+                        <div class="roll_nav_strip" style="background:rgb(150, 15, 15);"></div>
                     </li>
                     <li class="roll_nav_items" data-id="3" data-rank="5" data-dir="r" data-move="1">
                         <img src="img/first/farcry.png"/>
