--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 </head>
 <body>
 <div id="root">
+    <div id="mobile_nav_panel" class="mobile_nav_panel">
+
+
+        <ul class="mobile_nav_links">
+            <li class="mobile_nav_links_item"><a href="https://www.ubisoft.com/en-us/games">More Games</a></li>
+            <li class="mobile_nav_links_item"><a href="https://store.ubi.com/us">Store</a></li>
+            <li class="mobile_nav_links_item"><a href="https://news.ubisoft.com/">News</a></li>
+            <li class="mobile_nav_links_item"><a href="https://forums.ubi.com/">Forums</a></li>
+            <li class="mobile_nav_links_item"><a href="https://support.ubi.com/">Support</a></li>
+        </ul>
+        <div class="mobile_nav_search" id="mobile_nav_search">
+            <input class="mobile_nav_search_input" placeholder="Search" value=""/>
+
+        </div>
+    </div>
     <div id="pc_nav" class="pc_nav">
         <div class="pc_nav_logo_container">
             <a class="pc_nav_logo_link" href="https://www.ubisoft.com/">
@@ -187,6 +202,7 @@
             <p>INSIDE UBISOFT</p>
         </div>
         <div class="inside_container">
+
             <div class="inside_item inside_item_active" style="left:0%;">
                 <div class="inside_item_description">
                     <h4>INTRODUCING UBISOFT WINNIPEG</h4>
