INSIDE COL ADJUST

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             <p>INSIDE UBISOFT</p>
         </div>
         <div class="inside_container">
-            <ul>
-                <li>
+            <ul id="inside_ul">
+                <li data-rank="0" data-opt="inside">
                     <div class="inside_item">
                         <div class="inside_item_description">
                             <h4>INTRODUCING UBISOFT WINNIPEG</h4>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                 </li>
-                <li>
+                <li data-rank="1" data-opt="inside">
                     <div class="inside_item inside_item_active">
                         <div class="inside_item_description">
                             <h4>Say hello to SAM</h4>
@@ -242,7 +242,7 @@
                         </div>
                     </div>
                 </li>
-                <li>
+                <li data-rank="2" data-opt="inside">
                     <div class="inside_item">
                         <div class="inside_item_description">
                             <h4>LIFE AT UBISOFT</h4>
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                 </li>
-                <li>
+                <li data-rank="3" data-opt="inside">
                     <div class="inside_item">
                         <div class="inside_item_description">
                             <h4>REINVENTING THE GAME</h4>
@@ -401,6 +401,7 @@
 </div>
 </body>
 <script src="js/scroll.js"></script>
+<script src="js/touch.js"></script>
 <script src="js/ajax.js"></script>
 <script src="js/search.js"></script>
 </html>
