--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
         <div class="inside_container">
             <ul id="inside_ul">
-                <li data-rank="0" data-opt="inside">
+                <li data-rank="0" data-opt="inside" style="left:0;">
                     <div class="inside_item">
                         <div class="inside_item_description">
                             <h4>INTRODUCING UBISOFT WINNIPEG</h4>
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                 </li>
-                <li data-rank="1" data-opt="inside">
+                <li data-rank="1" data-opt="inside" style="left:50vw;">
                     <div class="inside_item inside_item_active">
                         <div class="inside_item_description">
                             <h4>Say hello to SAM</h4>
@@ -242,7 +242,7 @@
                         </div>
                     </div>
                 </li>
-                <li data-rank="2" data-opt="inside">
+                <li data-rank="2" data-opt="inside" style="left:100vw;">
                     <div class="inside_item">
                         <div class="inside_item_description">
                             <h4>LIFE AT UBISOFT</h4>
@@ -258,7 +258,7 @@
                         </div>
                     </div>
                 </li>
-                <li data-rank="3" data-opt="inside">
+                <li data-rank="3" data-opt="inside" style="left:150vw;">
                     <div class="inside_item">
                         <div class="inside_item_description">
                             <h4>REINVENTING THE GAME</h4>
