--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="inside_before">
             <p>INSIDE UBISOFT</p>
         </div>
-        <div class="inside_container">
+        <div class="inside_container" id="inside_container">
             <ul id="inside_ul">
                 <li data-rank="0" data-opt="inside" style="left:0;">
                     <div class="inside_item">
